// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`buildManifest has checked includeExternalUrls 1`] = `
[
  {
    "default": "checked",
    "key": "includeExternalUrls",
    "title": "Include external URLs in results",
    "type": "checkbox",
  },
  {
    "default": "",
    "key": "mediaFlowProxyUrl",
    "title": "MediaFlow Proxy URL",
    "type": "text",
  },
  {
    "default": "",
    "key": "mediaFlowProxyPassword",
    "title": "MediaFlow Proxy Password",
    "type": "password",
  },
]
`;

exports[`buildManifest has checked source with appropriate config 1`] = `
[
  {
    "default": "checked",
    "key": "de",
    "title": "German 🇩🇪 (StreamKiste, MeineCloud)",
    "type": "checkbox",
  },
  {
    "key": "es",
    "title": "Castilian Spanish 🇪🇸 (VerHdLink)",
    "type": "checkbox",
  },
  {
    "key": "mx",
    "title": "Latin American Spanish 🇲🇽 (VerHdLink)",
    "type": "checkbox",
  },
  {
    "default": "checked",
    "key": "includeExternalUrls",
    "title": "Include external URLs in results",
    "type": "checkbox",
  },
  {
    "default": "",
    "key": "mediaFlowProxyUrl",
    "title": "MediaFlow Proxy URL",
    "type": "text",
  },
  {
    "default": "",
    "key": "mediaFlowProxyPassword",
    "title": "MediaFlow Proxy Password",
    "type": "password",
  },
]
`;

exports[`buildManifest has unchecked source without a config 1`] = `
[
  {
    "key": "multi",
    "title": "Multi 🌐 (VixSrc)",
    "type": "checkbox",
  },
  {
    "key": "de",
    "title": "German 🇩🇪 (StreamKiste, MeineCloud)",
    "type": "checkbox",
  },
  {
    "key": "es",
    "title": "Castilian Spanish 🇪🇸 (VerHdLink)",
    "type": "checkbox",
  },
  {
    "key": "it",
    "title": "Italian 🇮🇹 (VixSrc)",
    "type": "checkbox",
  },
  {
    "key": "mx",
    "title": "Latin American Spanish 🇲🇽 (VerHdLink)",
    "type": "checkbox",
  },
  {
    "key": "includeExternalUrls",
    "title": "Include external URLs in results",
    "type": "checkbox",
  },
  {
    "default": "",
    "key": "mediaFlowProxyUrl",
    "title": "MediaFlow Proxy URL",
    "type": "text",
  },
  {
    "default": "",
    "key": "mediaFlowProxyPassword",
    "title": "MediaFlow Proxy Password",
    "type": "password",
  },
]
`;

exports[`buildManifest includeExternalUrls is unchecked by default 1`] = `
[
  {
    "key": "includeExternalUrls",
    "title": "Include external URLs in results",
    "type": "checkbox",
  },
  {
    "default": "",
    "key": "mediaFlowProxyUrl",
    "title": "MediaFlow Proxy URL",
    "type": "text",
  },
  {
    "default": "",
    "key": "mediaFlowProxyPassword",
    "title": "MediaFlow Proxy Password",
    "type": "password",
  },
]
`;
